adds new sounds

--- a/src/index.html
+++ b/src/index.html
@@ -119,19 +119,8 @@
     <div class="control-group">
       <label for="sound-selector">Keyboard Switch Sound</label>
       <select id="sound-selector">
-        <optgroup label="Linear Switches">
-          <option value="gateron-black">Gateron Black Ink - Deep & Smooth</option>
-          <option value="alpaca">Alpaca - Clean & Crisp</option>
-          <option value="tangerine">C³ Tangerine - High-pitched & Smooth</option>
-          <option value="akko-silver">Akko CS Silver - Light & Crisp</option>
-          <option value="nk-cream">NovelKeys Cream - Unique & Creamy</option>
-        </optgroup>
-        <optgroup label="Tactile Switches">
-          <option value="boba-u4t">Gazzew Boba U4T - Deep Thock</option>
-          <option value="holy-panda">Drop Holy Panda - Sharp Tactile</option>
-        </optgroup>
         <optgroup label="Other">
-          <option value="click">Simple Click - Basic Click Sound</option>
+          <!-- <option value="click">Simple Click - Basic Click Sound</option> -->
         </optgroup>
       </select>
       <div class="switch-description" id="switch-desc"></div>
