--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>MechNerd</title>
+  <title>Mech Aura</title>
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
@@ -107,7 +107,7 @@
 
 <body>
   <div class="container">
-    <h1>MechNerd</h1>
+    <h1>Mech Aura</h1>
 
     <div class="control-group">
       <label>
